# topic0

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CODEBASE.md  Cargo.toml  Dockerfile  PERFORMANCE.md  README.md  config.toml.example  docker-compose.yml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  docker.yml
bins/indexer-cli/: Cargo.toml
bins/indexer-cli/src/: cli.rs  commands.rs  ingest.rs  main.rs  plan.rs  shutdown.rs  supervisor.rs  tip.rs  wiring.rs  worker.rs
bins/query/: Cargo.toml
bins/query/src/: main.rs
crates/abi/: Cargo.toml
crates/abi-schema/: Cargo.toml
crates/abi-schema/src/: lib.rs
crates/abi/src/: decode.rs  lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  server.rs
crates/api/src/graphql/: connection.rs  inputs.rs  mod.rs  query.rs  row.rs  scalars.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  validate.rs
crates/config/src/model/: app.rs  chain.rs  mod.rs
crates/db/: Cargo.toml
crates/db-query/: Cargo.toml
crates/db-query/src/: builder.rs  cache.rs  lib.rs  pagination.rs
crates/db/src/: base_schema.rs  encode.rs  error.rs  lib.rs  pool.rs  unit_of_work.rs
crates/db/src/repositories/: block_repo.rs  cursor_repo.rs  event_repo.rs  mod.rs  queue_repo.rs  raw_record_repo.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/ports/: api_server.rs  chain_source.rs  cost_model.rs  decoder.rs  migrator.rs  mod.rs  queue_repo.rs  repository.rs  unit_of_work.rs
crates/migrator/: Cargo.toml
crates/migrator/src/: ddl.rs  error.rs  lib.rs  migrator.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/pricing/: Cargo.toml
crates/pricing/src/: alchemy.rs  free_node.rs  ledger.rs  lib.rs  quicknode.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs
crates/services/: Cargo.toml
crates/services/src/: decoding.rs  ingestion.rs  lib.rs  reorg.rs  worker.rs
crates/services/tests/: decoding.rs  ingestion.rs  reorg.rs  seam.rs
crates/services/tests/common/: mod.rs
crates/shared/src/: error.rs  lib.rs  util.rs
crates/shared/src/model/: block.rs  chain.rs  mod.rs  query.rs  record.rs  spend.rs  work.rs
crates/source/: Cargo.toml
crates/source/src/: batch.rs  client.rs  decoder.rs  enrichment.rs  error.rs  lib.rs  limiter.rs  map.rs  metric.rs  registry.rs  retry.rs
crates/sql-pg/: Cargo.toml
crates/sql-pg/src/: lib.rs
dashboard/: README.md  env-indexer.json
