[package]
name = "indexer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
schema = { workspace = true }
domain = { workspace = true }
config = { workspace = true }
db = { workspace = true }
migrator = { workspace = true }
services = { workspace = true }
source = { workspace = true }
pricing = { workspace = true }
observability = { workspace = true }
metrics = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
