[package]
name = "abi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared = { workspace = true }
schema = { workspace = true }
abi-schema = { workspace = true }
alloy-primitives = { workspace = true }
alloy-json-abi = { workspace = true }
alloy-dyn-abi = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
