[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared = { workspace = true }
domain = { workspace = true }
schema = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
serde_json = { workspace = true }
async-graphql = { version = "7", features = ["dynamic-schema"] }
async-graphql-axum = "7"
axum = "0.8"
