[package]
name = "db-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared = { workspace = true }
schema = { workspace = true }
sql-pg = { workspace = true }
domain = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
moka = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
