[package]
name = "db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared = { workspace = true }
domain = { workspace = true }
config = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
] }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
metrics = { workspace = true }
